<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tonypi_line_detection</name>
  <version>0.0.1</version>
  <description>line center detection</description>
  <maintainer email="nuo.wu@horizon.ai">wunuo</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>dnn_node</depend>
  <depend>std_msgs</depend>
  <depend>hbm_img_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ai_msgs</depend>
  <depend>sensor_msgs</depend>


  <exec_depend>hobot_codec</exec_depend>
  <exec_depend>websocket</exec_depend>
  <exec_depend>tros_tonypi_image_correction</exec_depend>
  <exec_depend>tros_tonypi_line_detection_model</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
